--- a/index.html
+++ b/index.html
@@ -29,17 +29,63 @@
     <div class="container">
       <!-- Timeblocks go here -->
       <!-- 9 am -->
+      <div id="9am" class="row time-block">
+          <div class="col-md-1 hour">9:00 AM</div>
+          <textarea class="col-md-10 description"></textarea>
+          <button id="button9am" class="saveBtn col-md-1" type="button"><i class="far fa-save"></i></button>
+      </div>
       <!-- 10 am -->
+      <div id="10am" class="row time-block">
+        <div class="col-md-1 hour">10:00 AM</div>
+        <textarea class="col-md-10 description"></textarea>
+        <button id="button10am" class="saveBtn col-md-1" type="button"><i class="far fa-save"></i></button>
+    </div>
       <!-- 11 am -->
+      <div id="11am" class="row time-block">
+        <div class="col-md-1 hour">11:00 AM</div>
+        <textarea class="col-md-10 description"></textarea>
+        <button id="button11am" class="saveBtn col-md-1" type="button"><i class="far fa-save"></i></button>
+    </div>
       <!-- 12pm -->
+      <div id="12pm" class="row time-block">
+        <div class="col-md-1 hour">12:00 PM</div>
+        <textarea class="col-md-10 description"></textarea>
+        <button id="button12pm" class="saveBtn col-md-1" type="button"><i class="far fa-save"></i></button>
+    </div>
       <!-- 1 pm -->
+      <div id="1pm" class="row time-block">
+        <div class="col-md-1 hour">1:00 PM</div>
+        <textarea class="col-md-10 description"></textarea>
+        <button id="button1pm" class="saveBtn col-md-1" type="button"><i class="far fa-save"></i></button>
+    </div>
       <!-- 2 pm -->
+      <div id="2pm" class="row time-block">
+        <div class="col-md-1 hour">2:00 PM</div>
+        <textarea class="col-md-10 description"></textarea>
+        <button id="button2pm" class="saveBtn col-md-1" type="button"><i class="far fa-save"></i></button>
+    </div>
       <!-- 3 pm -->
+      <div id="3pm" class="row time-block">
+        <div class="col-md-1 hour">3:00 PM</div>
+        <textarea class="col-md-10 description"></textarea>
+        <button id="button3pm" class="saveBtn col-md-1" type="button"><i class="far fa-save"></i></button>
+    </div>
       <!-- 4 pm -->
+      <div id="4pm" class="row time-block">
+        <div class="col-md-1 hour">4:00 PM</div>
+        <textarea class="col-md-10 description"></textarea>
+        <button id="button4pm" class="saveBtn col-md-1" type="button"><i class="far fa-save"></i></button>
+    </div>
       <!-- 5 pm -->
+      <div id="5pm" class="row time-block">
+        <div class="col-md-1 hour">5:00 PM</div>
+        <textarea class="col-md-10 description"></textarea>
+        <button id="button5pm" class="saveBtn col-md-1" type="button"><i class="far fa-save"></i></button>
+    </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="./assets/js/script.js"></script>
   </body>
 </html>
